--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorBackground"
-    tools:context=".activity.RegisterActivity">
+    tools:context=".activity.CadastroActivity">
 
     <FrameLayout
         android:id="@+id/container"
