--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="129dp"
             android:layout_marginBottom="25dp"
@@ -24,23 +25,29 @@
 
         <Button
             android:id="@+id/buttonLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/button_primary"
             android:text="Login"
             android:textAllCaps="false"
+            android:textSize="18dp"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/buttonRegister"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/button_secondary"
             android:text="Registrar-se"
             android:textAllCaps="false"
+            android:textSize="18dp"
             android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
