--- a/app/src/main/res/layout/fragment_usuario.xml
+++ b/app/src/main/res/layout/fragment_usuario.xml
@@ -49,7 +49,7 @@
             android:textSize="14sp" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/textEmail"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="20dp"
@@ -66,7 +66,7 @@
             tools:targetApi="o" />
 
         <EditText
-            android:id="@+id/senha"
+            android:id="@+id/textSenha"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="20dp"
@@ -83,7 +83,7 @@
             tools:targetApi="o" />
 
         <EditText
-            android:id="@+id/confirmarSenha"
+            android:id="@+id/textConfirmar"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="20dp"
@@ -100,7 +100,7 @@
             tools:targetApi="o" />
 
         <CheckBox
-            android:id="@+id/termos"
+            android:id="@+id/checkTermos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
@@ -108,15 +108,40 @@
             android:text="Eu li e concordo com os termos de uso e a política de privacidade"
             android:textColor="@color/gray" />
 
-        <Button
-            android:id="@+id/finalizar"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/button_primary"
-            android:text="Finalizar"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+
+            <Button
+                android:id="@+id/buttonVoltar"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/button_option"
+                android:elevation="4dp"
+                android:text="Voltar"
+                android:textAllCaps="false"
+                android:layout_weight="1"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/buttonFinalizar"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/button_primary"
+                android:elevation="4dp"
+                android:text="Continuar"
+                android:layout_weight="1"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
