--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#0077F3</color>
     <color name="colorPrimaryDark">#1852af</color>
     <color name="colorBackground">#f9f9f9</color>
+    <color name="colorAccent">#0077F3</color>
     <color name="lightgray">#E8E8E8</color>
     <color name="gray">#808080</color>
-    <color name="colorAccent">#FFF</color>
+    <color name="red">#CD3E42</color>
 </resources>
