--- a/app/src/main/res/menu/activity_principal_drawer.xml
+++ b/app/src/main/res/menu/activity_principal_drawer.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+
     <item
         android:id="@+id/caixaMensagens"
         android:title="Caixa de Mensagens"
@@ -34,6 +37,5 @@
         android:id="@+id/documentos"
         android:title="Documentos"
         android:icon="@drawable/ic_documentos"/>
-
 
 </menu>
