--- a/app/src/main/res/drawable/button_secondary.xml
+++ b/app/src/main/res/drawable/button_secondary.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="100dp"
+        android:radius="6dp"
         />
     <solid
         android:color="#f9f9f9"
@@ -12,6 +12,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#0077F3"
+        android:color="@color/colorPrimary"
         />
 </shape>
