--- a/app/src/main/res/layout/fragment_aluno.xml
+++ b/app/src/main/res/layout/fragment_aluno.xml
@@ -7,201 +7,77 @@
     tools:context=".fragments.register.AlunoFragment">
 
     <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <com.kofigyan.stateprogressbar.StateProgressBar
-            android:id="@+id/progressRegister"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            app:spb_currentStateNumber="one"
-            app:spb_maxStateNumber="three"
-            app:spb_stateBackgroundColor="@color/lightgray"
-            app:spb_stateForegroundColor="@color/colorPrimary"
-            app:spb_stateNumberBackgroundColor="@color/gray"
-            app:spb_stateNumberForegroundColor="#eeeeee"
-            app:spb_currentStateDescriptionColor="@color/colorPrimary"
-            app:spb_stateDescriptionColor="@color/gray"
-            app:spb_animateToCurrentProgressState="true"
-            app:spb_checkStateCompleted="true"
-            app:spb_descriptionLinesSpacing="2sp"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Dados do Aluno"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textAlignment="center"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Todos os campos abaixos são obrigatórios"
-            android:textSize="14sp"
-            android:textColor="@color/gray"
-            android:textAlignment="center"/>
-
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imageProfile"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:src="@drawable/ic_aluno"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginTop="120dp"
-                android:background="@drawable/button_primary"
-                android:text="+"
-                android:textColor="@android:color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.85"
-                app:layout_constraintStart_toStartOf="@+id/imageProfile"
-                app:layout_constraintTop_toTopOf="@+id/imageProfile"
-                app:layout_constraintVertical_bias="0.98" />
-
-        </android.support.constraint.ConstraintLayout>
-
-        <EditText
-            android:id="@+id/textNome"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@color/lightgray"
-            android:ems="10"
-            android:hint="Nome Completo"
-            android:importantForAutofill="no"
-            android:inputType="textPersonName"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="@android:color/black"
-            tools:targetApi="o" />
-
-        <EditText
-            android:id="@+id/textMatricula"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@color/lightgray"
-            android:ems="10"
-            android:hint="Matrícula"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="@android:color/black"
-            tools:targetApi="o" />
-
-        <EditText
-            android:id="@+id/textData"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@color/lightgray"
-            android:ems="10"
-            android:hint="Data de Nascimento"
-            android:importantForAutofill="no"
-            android:inputType="date"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="@android:color/black"
-            tools:targetApi="o" />
-
-        <Spinner
-            android:id="@+id/spinNivel"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@color/lightgray"
-            android:dropDownWidth="match_parent"
-            android:entries="@array/nivel"
-            android:minWidth="40dp"
-            android:minHeight="40dp"
-            android:popupBackground="@color/colorBackground" />
-
-        <RadioGroup
-            android:id="@+id/sexoGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:orientation="horizontal">
+            <com.kofigyan.stateprogressbar.StateProgressBar
+                android:id="@+id/progressRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                app:spb_currentStateNumber="one"
+                app:spb_maxStateNumber="three"
+                app:spb_stateBackgroundColor="@color/lightgray"
+                app:spb_stateForegroundColor="@color/colorPrimary"
+                app:spb_stateNumberBackgroundColor="@color/gray"
+                app:spb_stateNumberForegroundColor="#eeeeee"
+                app:spb_currentStateDescriptionColor="@color/colorPrimary"
+                app:spb_stateDescriptionColor="@color/gray"
+                app:spb_animateToCurrentProgressState="true"
+                app:spb_checkStateCompleted="true"
+                app:spb_descriptionLinesSpacing="2sp"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="Dados do Aluno"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:text="Sexo:"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:layout_marginBottom="6dp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="Nome Completo do Aluno"
+                android:textSize="18sp"
+                android:textColor="@color/colorPrimary"/>
 
-            <RadioButton
-                android:id="@+id/radioMasculino"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:buttonTint="@color/colorPrimary"
-                android:checked="true"
-                android:text="Masculino"
-                android:textSize="18sp" />
-
-            <RadioButton
-                android:id="@+id/radioFeminino"
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:buttonTint="@color/colorPrimary"
-                android:text="Feminino"
-                android:textSize="18sp" />
-        </RadioGroup>
+                android:layout_marginEnd="20dp">
 
-        <Button
-            android:id="@+id/buttonContinuar"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/button_primary"
-            android:text="Continuar"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white" />
+                <android.support.v7.widget.SearchView
+                    android:id="@+id/searchViewPesquisa"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/lightgray"/>
 
-    </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-</ScrollView>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerViewAlunos"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="16dp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
