--- a/app/src/main/res/layout/adapter_notificacao.xml
+++ b/app/src/main/res/layout/adapter_notificacao.xml
@@ -9,7 +9,7 @@
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageRemetente"
+            android:id="@+id/imagemDepartamento"
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_margin="14dp"
@@ -17,53 +17,70 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginBottom="5dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="15dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textRemetente"
+                    android:id="@+id/textDepartamento"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
                     android:text="Departamento"
-                    android:textSize="18dp"
                     android:layout_weight="1"
+                    android:textColor="@android:color/black"
                     android:textAllCaps="true"
-                    android:textStyle="bold"
-                    android:lines="1"
-                    android:textColor="@android:color/black" />
+                    android:textSize="18sp"/>
 
-                <Button
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/textNaoLida"
+                    android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="16dp"
-                    android:clickable="false"
-                    android:background="@color/colorPrimary"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:layout_weight="2"
+                    android:textAllCaps="true"
+                    android:textSize="12sp"
                     android:text="Não lida"
                     android:textColor="@android:color/white"
-                    />
+                    android:background="@color/colorPrimary"
+                    android:textAlignment="center"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textNotificacao"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="Mensagem de Notificação"
-                android:textSize="16dp"
-                android:maxHeight="60dp"
-                android:lines="2"
-                android:textColor="@android:color/black"/>
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textDescricao"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="Conteúdo da notificação"
+                    android:layout_weight="1"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:id="@+id/textData"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="XX/XX às 00:00"
+                    android:layout_weight="2"
+                    android:textAllCaps="true"
+                    android:textSize="12sp"
+                    android:textAlignment="center"/>
+            </LinearLayout>
 
         </LinearLayout>
 
