--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                     android:layout_margin="20dp"
                     android:fontFamily="@font/opensans_regular"
                     android:textSize="18sp"
-                    android:text="Para acessar o Portal, informe seus dados"
+                    android:text="Para acessar o Portal, utilize as informações da sua conta SIGAA"
                     android:textAlignment="center"/>
 
                 <TextView
