--- a/app/src/main/res/layout/nav_header_principal.xml
+++ b/app/src/main/res/layout/nav_header_principal.xml
@@ -13,7 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageProfile"
+        android:id="@+id/imageProfileHeader"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
@@ -33,6 +33,7 @@
         android:layout_gravity="center_vertical">
 
         <TextView
+            android:id="@+id/txtNomeHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -42,7 +43,7 @@
             android:textSize="18dp"/>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txtEmailHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="responsavel@gmail.com"
