--- a/app/src/main/res/layout/activity_enviar_notificacao.xml
+++ b/app/src/main/res/layout/activity_enviar_notificacao.xml
@@ -60,31 +60,47 @@
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/pesquisarEmail"
+        android:id="@+id/alunosSelecionados"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:text="Alunos Selecionados:"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/selecionados"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="2dp"
+        android:text="Nenhum aluno selecionado \n"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/pesquisarEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/opensans_regular"
-        android:text="Pesquisar por Email"
+        android:text="Pesquisar por Aluno"
         android:textSize="18sp"
         android:textColor="@color/colorPrimary"
         android:visibility="gone"/>
 
-    <EditText
-        android:id="@+id/textEmail"
+    <android.support.v7.widget.SearchView
+        android:id="@+id/searchViewPesquisa"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="6dp"
         android:background="@color/lightgray"
-        android:ems="10"
-        android:hint="Email"
-        android:fontFamily="@font/opensans_regular"
-        android:importantForAutofill="no"
-        android:inputType="text"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:textColor="@android:color/black"
-        tools:targetApi="o"
+        android:visibility="gone"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewAlunos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:visibility="gone"/>
 
     <TextView
